--- a/style.css
+++ b/style.css
@@ -43,17 +43,17 @@ textarea{
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color:rgb(136,56,45);
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
+  background-color:rgb(173, 116, 96);
   color: white;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color:rgb(249,227,203);
   color: white;
 }
 
@@ -61,7 +61,7 @@ textarea{
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
+  background-color:rgb(214,163,84);
   color: white;
 }
 
