--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Goudy Bookletter 1911', serif;
   font-size: 16px;
   line-height: 1;
+  background: tan;
 }
 
 textarea{
@@ -11,6 +12,7 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  font-weight: bolder;
 }
 
 .jumbotron {
@@ -27,19 +29,22 @@ textarea{
 
 .time-block{
   text-align: center;
-  border-radius: 15px;
+  border-radius: 25px;
+  margin: 20px;
 }
 
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  border-radius: 25px;
+  font-weight: bold;
 }
 
 .past {
